<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.1.0</version>
  </parent>

  <groupId>de.gematik.idp</groupId>
  <artifactId>gemSekIdp-global</artifactId>
  <version>8.4.2</version>
  <packaging>pom</packaging>

  <description>gsi - gematik sektoraler IDP</description>

  <organization>
    <name>gematik GmbH</name>
    <url>http://www.gematik.de</url>
  </organization>

  <licenses>
    <license>
      <name>Apache License 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>gematik</name>
      <email>software-development@gematik.de</email>
      <url>https://gematik.github.io/</url>
      <organization>gematik GmbH</organization>
      <organizationUrl>https://www.gematik.de/</organizationUrl>
    </developer>
  </developers>

  <modules>
    <module>gsi-server</module>
    <module>gsi-fedmaster</module>
    <module>gsi-testsuite</module>
    <module>gsi-coverage-report</module>
  </modules>

  <distributionManagement>
    <repository>
      <id>releases</id>
      <url>${releaseDeploymentRepository}</url>
    </repository>
    <snapshotRepository>
      <id>snapshots</id>
      <url>${snapshotDeploymentRepository}</url>
    </snapshotRepository>
  </distributionManagement>

  <properties>

    <!-- docker.registry.gematik will be set in Jenkinsfile -->
    <docker.registry.gematik>local</docker.registry.gematik>
    <docker.image.name.gsiserver>${docker.registry.gematik}/idm/gsi-server</docker.image.name.gsiserver>
    <docker.image.name.gsifedmaster>${docker.registry.gematik}/idm/gsi-fedmaster</docker.image.name.gsifedmaster>
    <java.version>21</java.version>
    <mpir.skip>true</mpir.skip>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/gsi-coverage-report/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
    <sonar.dependencyCheck.htmlReportPath>${project.basedir}/target/dependency-check-report.html</sonar.dependencyCheck.htmlReportPath>
    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
    <sonar.language>java</sonar.language>

    <version.bouncycastle.bcpkix>1.84</version.bouncycastle.bcpkix>
    <version.commons-io>2.22.0</version.commons-io>
    <version.copy-rename-maven-plugin>1.0.1</version.copy-rename-maven-plugin>
    <version.json>20251224</version.json>
    <version.unirest.java.core>4.10.0</version.unirest.java.core>
    <version.unirest.objectmapper.jackson>4.2.9</version.unirest.objectmapper.jackson>
    <version.httpcore5>5.4.2</version.httpcore5>
    <version.docker-maven-plugin>0.48.1</version.docker-maven-plugin>
    <version.idp-commons>30.0.11</version.idp-commons>
    <version.idp-crypto>30.0.9</version.idp-crypto>
    <version.idp-test>30.0.11</version.idp-test>

    <version.jacoco-maven-plugin>0.8.15</version.jacoco-maven-plugin>
    <version.lombok>1.18.46</version.lombok>
    <version.maven>3.8.6</version.maven>
    <version.maven-enforcer-plugin>3.6.3</version.maven-enforcer-plugin>
    <version.maven-failsafe-plugin>3.2.5</version.maven-failsafe-plugin>
    <version.sonar-maven-plugin>5.7.0.6970</version.sonar-maven-plugin>
    <version.spotless-maven-plugin>3.7.0</version.spotless-maven-plugin>
    <version.spotless.google-java-format>1.27.0</version.spotless.google-java-format>
    <yarnAuditAnalyzerEnabled>false</yarnAuditAnalyzerEnabled>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>gsi-server</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>gsi-fedmaster</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>gsi-testsuite</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.bouncycastle</groupId>
        <artifactId>bcpkix-jdk18on</artifactId>
        <version>${version.bouncycastle.bcpkix}</version>
      </dependency>
      <dependency>
        <groupId>org.json</groupId>
        <artifactId>json</artifactId>
        <version>${version.json}</version>
      </dependency>
      <dependency>
        <groupId>com.konghq</groupId>
        <artifactId>unirest-java-core</artifactId>
        <version>${version.unirest.java.core}</version>
      </dependency>
      <dependency>
        <groupId>com.konghq</groupId>
        <artifactId>unirest-objectmapper-jackson</artifactId>
        <version>${version.unirest.objectmapper.jackson}</version>
      </dependency>
      <dependency>
        <groupId>tools.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>3.2.0</version>
      </dependency>
      <dependency>
        <groupId>tools.jackson.core</groupId>
        <artifactId>jackson-core</artifactId>
        <version>3.2.0</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-annotations</artifactId>
        <version>2.22</version>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${version.lombok}</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${version.commons-io}</version>
      </dependency>
      <dependency>
        <groupId>de.gematik.idp</groupId>
        <artifactId>idp-crypto</artifactId>
        <version>${version.idp-crypto}</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>de.gematik.idp</groupId>
        <artifactId>idp-commons</artifactId>
        <version>${version.idp-commons}</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>de.gematik.idp</groupId>
        <artifactId>idp-test</artifactId>
        <version>${version.idp-test}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter</artifactId>
        <exclusions>
          <exclusion>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.22.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.9.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>${version.maven-enforcer-plugin}</version>
        <executions>
          <execution>
            <id>enforce-versions</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <message>Maven version should be ${version.maven} at least.</message>
                  <version>${version.maven}</version>
                </requireMavenVersion>
                <requireJavaVersion>
                  <message>Java version should be ${java.version}.</message>
                  <version>${java.version}</version>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!-- Phase clean -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <configuration>
          <filesets>
            <!-- delete logfiles -->
            <fileset>
              <directory>logs</directory>
              <includes>
                <include>**/*</include>
              </includes>
              <followSymlinks>false</followSymlinks>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
      <!-- remove only needed for mvn site runs -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
      </plugin>
      <!-- to remove docker images call mvn docker:remove -Ddocker.removeNamePattern=idp-* -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>${surefireArgLine} -Xshare:off -XX:+EnableDynamicAgentLoading
            -Dfile.encoding=UTF-8
            -Djacoco-agent.destfile=${project.basedir}/../gsi-coverage-report/target/jacoco.exec</argLine>
          <skipTests>${skip.unittests}</skipTests>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${version.jacoco-maven-plugin}</version>
        <configuration>
          <includes>
            <include>de/gematik/**/*</include>
          </includes>
          <haltOnFailure>false</haltOnFailure>
          <dataFile>${project.basedir}/../gsi-coverage-report/target/jacoco.exec</dataFile>
          <rules>
            <rule>
              <limits>
                <limit>
                  <minimum>0.80</minimum>
                </limit>
              </limits>
            </rule>
          </rules>
        </configuration>
        <executions>
          <execution>
            <id>default-prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <configuration>
              <propertyName>surefireArgLine</propertyName>
              <append>true</append>
              <destFile>${project.basedir}/../gsi-coverage-report/target/jacoco.exec</destFile>
            </configuration>
          </execution>
          <execution>
            <id>default-report-integration</id>
            <goals>
              <goal>report-integration</goal>
            </goals>
            <configuration>
              <dataFile>${project.basedir}/../gsi-coverage-report/target/jacoco.exec</dataFile>
            </configuration>
          </execution>
          <execution>
            <id>post-unit-test</id>
            <goals>
              <goal>report</goal>
            </goals>
            <configuration>
              <dataFile>${project.basedir}/../gsi-coverage-report/target/jacoco.exec</dataFile>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- to upload jacoco results to sonar server via mvn sonar:sonar-->
      <plugin>
        <groupId>org.sonarsource.scanner.maven</groupId>
        <artifactId>sonar-maven-plugin</artifactId>
        <version>${version.sonar-maven-plugin}</version>
      </plugin>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${version.spotless-maven-plugin}</version>
        <configuration>
          <formats>
            <!-- you can define as many formats as you want, each is independent -->
            <format>
              <!-- define the files to apply to -->
              <includes>
                <include>**/*.yml</include>
              </includes>
              <excludes>
                <exclude>**/target/**/*</exclude>
              </excludes>
              <!-- define the steps to apply to those files -->
              <trimTrailingWhitespace/>
              <endWithNewline/>
              <indent>
                <spaces>true</spaces>
                <spacesPerTab>2</spacesPerTab>
              </indent>
            </format>
            <format>
              <includes>
                <include>**/*.feature</include>
              </includes>
              <licenseHeader>
                <file>LICENSE_PLACEHOLDER_FEATURE</file>
                <delimiter>^(?!#|\s).*</delimiter>
              </licenseHeader>
            </format>
          </formats>

          <java>
            <toggleOffOn/>
            <googleJavaFormat>
              <version>${version.spotless.google-java-format}</version>
              <style>GOOGLE</style>
              <reflowLongStrings>true</reflowLongStrings>
            </googleJavaFormat>
            <licenseHeader>
              <file>LICENSE_PLACEHOLDER</file>
            </licenseHeader>
          </java>
          <groovy>
            <includes>
              <include>**/*.Jenkinsfile</include>
            </includes>
            <importOrder/>
          </groovy>
          <markdown>
            <includes>
              <include>**/*.md</include>
            </includes>
            <excludes>
              <exclude>**/target/**/*</exclude>
            </excludes>
          </markdown>
          <pom>
            <includes>
              <include>pom.xml</include>
            </includes>
            <sortPom>
              <encoding>UTF-8</encoding>
              <expandEmptyElements>false</expandEmptyElements>
              <nrOfIndentSpace>2</nrOfIndentSpace>
              <predefinedSortOrder>recommended_2008_06</predefinedSortOrder>
            </sortPom>
          </pom>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>apply</goal>
            </goals>
            <phase>compile</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>2.7.1</version>
        <executions>
          <execution>
            <goals>
              <goal>aggregate-third-party-report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
